syntax = "proto3";
package garyeong.garyeong;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "garyeong/params.proto";
import "garyeong/models.proto";
import "garyeong/comment.proto";
// this line is used by starport scaffolding # 1

option go_package = "garyeong/x/garyeong/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/garyeong/garyeong/params";
  }
  // Queries a list of Report items.
	rpc GetReports(QueryGetReportsRequest) returns (QueryGetReportsResponse) {
		option (google.api.http).get = "/garyeong/garyeong/report";
	}

// Queries a Comment by id.
	rpc Comment(QueryGetCommentRequest) returns (QueryGetCommentResponse) {
		option (google.api.http).get = "/garyeong/garyeong/comment/{id}";
	}

	// Queries a list of Comment items.
	rpc CommentAll(QueryAllCommentRequest) returns (QueryAllCommentResponse) {
		option (google.api.http).get = "/garyeong/garyeong/comment";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetReportsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryGetReportsResponse {
  repeated Report report = 1;
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetCommentRequest {
	uint64 id = 1;
}

message QueryGetCommentResponse {
	Comment Comment = 1 [(gogoproto.nullable) = false];
}

message QueryAllCommentRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllCommentResponse {
	repeated Comment Comment = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
